# volumetric-estimation

./: .gitignore  README.md  README_DATASETS.md  README_PLAIN_TSDF.md  README_WEIGHTED_TSDF.md  README_ZED2I_DEPLOYMENT.md  pytest.ini  requirements.txt
rtabmap_volume/: README.md  __init__.py  config.py  pipeline.py  pyproject.toml  requirements.txt
rtabmap_volume/configs/: default.yaml  fast_preview.yaml  high_accuracy.yaml  object_on_table.yaml  recycling_pile.yaml
rtabmap_volume/eval/: __init__.py  gt_compare.py  metrics.py  synthetic_tests.py
rtabmap_volume/io/: __init__.py  load_geometry.py  rtabmap_export.py  save_outputs.py
rtabmap_volume/mesh/: __init__.py  mesh_cleaning.py  mesh_from_pointcloud.py  mesh_quality.py  mesh_repair.py  watertightness.py
rtabmap_volume/preprocess/: __init__.py  clustering.py  crop.py  denoise.py  downsample.py  normals.py  plane_removal.py  scale_units.py  segment_object.py
rtabmap_volume/scripts/: __init__.py  batch_estimate_volume.py  crop_interactive.py  estimate_volume.py  evaluate_against_gt.py  inspect_geometry.py  make_report.py  synthetic_volume_smoke_test.py
rtabmap_volume/tests/: conftest.py  test_clustering.py  test_consensus.py  test_known_shapes.py  test_mesh_volume.py  test_plane_removal.py  test_units.py  test_voxel_volume.py
rtabmap_volume/viz/: __init__.py  html_report.py  open3d_viewer.py  plots.py  screenshots.py
rtabmap_volume/volume/: __init__.py  alpha_shape_volume.py  consensus.py  convex_hull_volume.py  heightfield_volume.py  mesh_volume.py  uncertainty.py  voxel_volume.py
tests/: conftest.py  (+33 more)
(+171 files in other folders)
